# OnRobot_ROS2_Description

./: CMakeLists.txt  README.md  package.xml
launch/: view_onrobot.launch.py
rviz/: view_onrobot.rviz
urdf/: onrobot.urdf.xacro  onrobot_macro.xacro  rg2.urdf.xacro  rg2_macro.xacro  rg6.urdf.xacro  rg6_macro.xacro
urdf/inc/: rg_common.xacro
